--- a/views/adminIndex.ejs
+++ b/views/adminIndex.ejs
@@ -16,17 +16,17 @@
         <button id="addUser">addUser</button>
         <button id="removeUser">removeUser</button>
         <button id="modifyUser">modifyUser</button>
-
+        <br>
         <button id="manipulateProducts">Manipulate Products</button>
         <button id="addProduct">addProduct</button>
         <button id="modifyProduct">modifyProduct</button>
         <button id="removeProduct">removeProduct</button>
-
+        <br>
         <button id="manipulateInstructions">Manipulate Instructions</button>
         <button id="addInstruction">addInstruction</button>
         <button id="modifyInstruction">modifyInstruction</button>
         <button id="removeInstruction">removeInstruction</button>
-
+        <br>
         <button id="manipulateReceipes">Manipulate Recipies</button>
         <button id="addReceipe">addReceipe</button>
         <button id="modifyRecipe">modifyRecipe</button>
@@ -35,5 +35,6 @@
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script type="text/javascript" src="/js/materialize.min.js"></script>
       <script src="/js/adminIndex.js"></script>
+      <script src="/js/post.js"></script>
     </body>
   </html>
