--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -8,14 +8,22 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <title>Admin main page</title>
+      <%- include partials/loadercss %>
     </head>
 
     <body>
-        
-        <button>Manipulate User</button>
-        <button data-url="/user/signup">AddUser</button>
-        <button data-url="/user/delete">DeleteUser</button>
-        <button data-url="/user/changeInfo">Change Your Info</button>
+      
+        <%- include partials/loader %>
+
+        <div class="main">
+          <button>Manipulate User</button>
+          <button data-url="/user/signup">AddUser</button>
+          <button data-url="/user/delete">DeleteUser</button>
+          <button data-url="/user/changeInfo">Change Your Info</button>
+        </div>
+
+        <%- include partials/errors %>
 
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
