--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -8,15 +8,20 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <title>Login page</title>
+      
     </head>
 
     <body>
-        <h3><%= invalid %></h3>
-        <form id="loginForm">
-            <input type="text" id="username" />
-            <input type="password" id="password" />
-            <input type="submit" name="submit" value="SignUp"/>
-        </form>
+        
+        <div class="main">
+            <h3><%= invalid %></h3>
+            <form id="loginForm">
+                <input type="text" id="username" />
+                <input type="password" id="password" />
+                <input type="submit" value="Login"/>
+            </form>
+        </div>
 
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
