All /user route complete

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -18,9 +18,9 @@
 
         <div class="main">
           <button>Manipulate User</button>
-          <button data-url="/user/signup">AddUser</button>
-          <button data-url="/user/delete">DeleteUser</button>
-          <button data-url="/user/changeInfo">Change Your Info</button>
+          <button data-url="/signup">AddUser</button>
+          <button data-url="/delete">DeleteUser</button>
+          <button data-url="/changeInfo">Change Your Info</button>
         </div>
 
         <%- include partials/errors %>
