--- a/views/admin/change.ejs
+++ b/views/admin/change.ejs
@@ -8,19 +8,24 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <%- include partials/loadercss %>
     </head>
 
     <body>
         
-        <h2>Change Your Info</h2>
-        <form id="changeForm">
-            <input type="text" id="oldUsername" placeholder="old username">
-            <input type="text" id="newUsername" placeholder="new username">
-            <input type="password" id="oldPassword" placeholder="old password">
-            <input type="password" id="newPassword" placeholder="new password">
-            <input type="password" id="retypedPassword" placeholder="retype new password">
-            <input type="submit" value="Change Crediantials">
-        </form>
+        <%- include partials/loader %>
+        <div class="main">
+          <h2>Change Your Info</h2>
+          <form id="changeForm">
+              <input type="text" id="oldUsername" placeholder="old username">
+              <input type="text" id="newUsername" placeholder="new username">
+              <input type="password" id="oldPassword" placeholder="old password">
+              <input type="password" id="newPassword" placeholder="new password">
+              <input type="password" id="retypedPassword" placeholder="retype new password">
+              <input type="submit" value="Change Crediantials">
+          </form>
+        </div>
+        <%- include partials/errors %>
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script type="text/javascript" src="/js/libs/materialize.min.js"></script>
