--- a/views/admin/delete.ejs
+++ b/views/admin/delete.ejs
@@ -8,16 +8,20 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <%- include partials/loadercss %>
     </head>
 
     <body>
         
-        <h3>delete users</h3>
-        <div class="row">
-          <form class="col s12" id="userDelete" style="display: none">
-          </form>
-        </div>
-        
+        <%- include partials/loader %>
+        <div class="main">
+          <h3>delete users</h3>
+          <div class="row">
+            <form class="col s12" id="userDelete" style="display: none">
+            </form>
+          </div>
+        </div>  
+        <%- include partials/errors %>      
 
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
