--- a/views/product/delete.ejs
+++ b/views/product/delete.ejs
@@ -8,7 +8,7 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Admin main page</title>
+      <title>Add Product</title>
       <%- include partials/loadercss %>
     </head>
 
@@ -17,22 +17,18 @@
         <%- include partials/loader %>
 
         <div class="main">
-          <button>Manipulate User</button>
-          <button data-url="/user/signup">AddUser</button>
-          <button data-url="/user/delete">DeleteUser</button>
-          <button data-url="/user/changeInfo">Change Your Info</button>
-          <br>
-          <button>Manipulate Products</button>
-          <button data-url="/add/products">AddProduct</button>
-          <button data-url="/delete/products">DeleteProduct</button>
-          <button data-url="/changeInfo">Change Product Info</button>
-        </div>
+            <h3>delete product</h3>
+            <div class="row">
+                <form class="col s12" id="productDelete" style="display: none"></form>
+            </div>
+        </div>  
 
         <%- include partials/errors %>
 
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script type="text/javascript" src="/js/libs/materialize.min.js"></script>
-      <script src="/js/admin/index.js"></script>
+      <script src="/js/product/delete.js"></script>
     </body>
   </html>
+
