--- a/views/product/update.ejs
+++ b/views/product/update.ejs
@@ -8,7 +8,7 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Admin main page</title>
+      <title>Product update page</title>
       <%- include partials/loadercss %>
     </head>
 
@@ -17,15 +17,13 @@
         <%- include partials/loader %>
 
         <div class="main">
-          <button>Manipulate User</button>
-          <button data-url="/user/signup">AddUser</button>
-          <button data-url="/user/delete">DeleteUser</button>
-          <button data-url="/user/changeInfo">Change Your Info</button>
-          <br>
-          <button>Manipulate Products</button>
-          <button data-url="/add/products">AddProduct</button>
-          <button data-url="/delete/products">DeleteProduct</button>
-          <button data-url="/update/products">Change Product Info</button>
+            <form id="productUpdate">
+                <input type="text" id="oldName" placeholder="Old Name">
+                <input type="text" id="newName" placeholder="New Name">
+                <input type="text" id="newDescription" placeholder="New Description">
+                <input type="number" id="newPosition" placeholder="New Position">
+                <input type="submit" value="Update Product">
+            </form>
         </div>
 
         <%- include partials/errors %>
@@ -33,6 +31,6 @@
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script type="text/javascript" src="/js/libs/materialize.min.js"></script>
-      <script src="/js/admin/index.js"></script>
+      <script src="/js/product/update.js"></script>
     </body>
   </html>
