--- a/views/delispices/includes/externel.ejs
+++ b/views/delispices/includes/externel.ejs
@@ -20,11 +20,8 @@
 <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
 <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-
-
 <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
-
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <!-- Main Stylesheet File -->
 <link href="css/style.css" rel="stylesheet">
