--- a/views/recipe/update.ejs
+++ b/views/recipe/update.ejs
@@ -8,7 +8,7 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Admin main page</title>
+      <title>Recipe update page</title>
       <%- include partials/loadercss %>
     </head>
 
@@ -17,20 +17,12 @@
         <%- include partials/loader %>
 
         <div class="main">
-          <button>Manipulate User</button>
-          <button data-url="/user/signup">AddUser</button>
-          <button data-url="/user/delete">DeleteUser</button>
-          <button data-url="/user/changeInfo">Change Your Info</button>
-          <br>
-          <button>Manipulate Products</button>
-          <button data-url="/add/products">AddProduct</button>
-          <button data-url="/delete/products">DeleteProduct</button>
-          <button data-url="/update/products">Change Product Info</button>
-          <br>
-          <button>Manipulate Recipes</button>
-          <button data-url="/add/recipe">Addrecipes</button>
-          <button data-url="/delete/recipe">Deleterecipes</button>
-          <button data-url="/update/recipe">Change recipes Info</button>
+            <form id="recipeUpdate">
+                <input type="text" id="oldName" placeholder="Old Name">
+                <input type="text" id="newName" placeholder="New Name">
+                <textarea id="newDescription" cols="30" rows="10" placeholder="New Description"></textarea>
+                <input type="submit" value="Update Recipe">
+            </form>
         </div>
 
         <%- include partials/errors %>
@@ -38,6 +30,6 @@
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script type="text/javascript" src="/js/libs/materialize.min.js"></script>
-      <script src="/js/admin/index.js"></script>
+      <script src="/js/recipe/update.js"></script>
     </body>
   </html>
