some /all return all columns of the table

--- a/public/css/style-intro.css
+++ b/public/css/style-intro.css
@@ -610,7 +610,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 0;
 }
 
-/* Recipies
+/* recipes
 --------------------------------*/
 #about {
   background: url("../bg-img/back.jpg") center top no-repeat fixed;
