--- a/views/delispices/products.ejs
+++ b/views/delispices/products.ejs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
     <% include includes/externel.ejs %>
   <!-- Main Stylesheet File -->
   <link href="css/style-intro.css" rel="stylesheet">
@@ -22,22 +21,11 @@
                 <p><b>Our Wide Range of Products</b></p>
               </header>
       
-              <div class="row">
+              <div class="row product-detail">
       
-                        <div class="col-lg-4 col-md-6 box wow bounceInUp product-detail" data-wow-duration="1.4s" id="product1">
-                            <!-- <a href="1.BriyaniGravy.html">
-                            <img src="images/ProductImages/1.png"  alt="" class="img-fluid">
-                          </a>
-                            <br><br>
-                            <h4 class="title"><a href="1.BriyaniGravy.html">Biryani Gravy </a></h4>
-                            
-                            <form id="moreinfo">
-                                <input class="btn btn-success" onclick="window.location.href='1.BriyaniGravy.html'" type="button" value="More Info" />
-                           </form> -->
-                          </div>
              </div>
              </div>
-             </section>
+             
       <footer id="footer">
             <div class="container">
                     <div class="copyright">
@@ -56,7 +44,7 @@
 
 
 
-<script src="/js/main site/products.js"/>
+<script src="/js/main site/products.js"></script>
 
 
 </body>
