--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -9,11 +9,11 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Login page</title>
-      
+      <%- include partials/loadercss %>
     </head>
 
     <body>
-        
+        <%- include partials/loader %>
         <div class="main">
             <h3><%= invalid %></h3>
             <form id="loginForm">
