--- a/views/product/add.ejs
+++ b/views/product/add.ejs
@@ -9,6 +9,7 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Add Product</title>
+      <link rel="stylesheet" href="/css/product/add.css">
       <%- include partials/loadercss %>
     </head>
 
@@ -16,12 +17,22 @@
       
         <%- include partials/loader %>
 
-        <div class="main">
+        <div class="main container">
+            <h3 class="center-align">Add Product</h3>
             <form id="productForm">
+              <div class="input-field">
                 <input type="text" id="name">
-                <textarea id="description" cols="30" rows="10"></textarea>
+                <label for="name">Name</label>
+              </div>
+              <div class="input-field">
+                <textarea id="description" class="materialize-textarea"></textarea>
+                <label for="description">Description</label>
+              </div>
+              <div class="input-field">
                 <input type="number" id="position">
-                <input type="submit" value="Add Product">
+                <label for="position">Position</label>
+              </div>
+              <input class="waves-effect waves-light btn" type="submit" value="Add Product">
             </form>
         </div>
 
