--- a/views/recipe/add.ejs
+++ b/views/recipe/add.ejs
@@ -9,6 +9,7 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Add Recipe</title>
+      <link rel="stylesheet" href="/css/recipe/add.css">
       <%- include partials/loadercss %>
     </head>
 
@@ -16,11 +17,18 @@
       
         <%- include partials/loader %>
 
-        <div class="main">
+        <div class="main container">
+            <h3 class="center-align">Add Recipe</h3>
             <form id="recipeForm">
-                <input type="text" id="name" placeholder="name">
-                <textarea id="description" cols="30" rows="10" placeholder="description"></textarea>
-                <input type="submit" value="Add Recipe">
+                <div class="input-field">
+                  <input type="text" id="name">
+                  <label for="name">Name</label>
+                </div>
+                <div class="input-field">
+                  <textarea id="description" class="materialize-textarea"></textarea>
+                  <label for="description">Description</label>
+                </div>
+                <input class="waves-effect waves-light btn" type="submit" value="Add Recipe">
             </form>
         </div>
 
