--- a/views/recipe/delete.ejs
+++ b/views/recipe/delete.ejs
@@ -9,6 +9,7 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Delete Recipe</title>
+      <link rel="stylesheet" href="/css/recipe/delete.css">
       <%- include partials/loadercss %>
     </head>
 
@@ -16,8 +17,8 @@
       
         <%- include partials/loader %>
 
-        <div class="main">
-            <h3>delete Recipe</h3>
+        <div class="main container">
+            <h3 class="center-align">Delete Recipe</h3>
             <div class="row">
                 <form class="col s12" id="recipeDelete" style="display: none"></form>
             </div>
