--- a/views/recipe/partials/errors.ejs
+++ b/views/recipe/partials/errors.ejs
@@ -1,3 +1,3 @@
 <div class="errors">
-    You are not authorized to use this route
+    You are <span style="color: #66fcf1">not authorized</span> to use this route
 </div>
