--- a/views/recipe/partials/loadercss.ejs
+++ b/views/recipe/partials/loadercss.ejs
@@ -1,4 +1,12 @@
 <style>
+    *{
+        color: #ffffff;
+    }
+
+    body{
+        background-color: #0b0c10;
+    }
+
     .loader {
         border-top: 4px solid teal;
         border-right: 4px solid white;
@@ -29,5 +37,7 @@
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
+        font-size: 25px;
+        text-align: center;
     }
 </style>
