--- a/views/recipe/update.ejs
+++ b/views/recipe/update.ejs
@@ -9,6 +9,7 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Recipe update page</title>
+      <link rel="stylesheet" href="/css/recipe/update.css">
       <%- include partials/loadercss %>
     </head>
 
@@ -16,12 +17,22 @@
       
         <%- include partials/loader %>
 
-        <div class="main">
+        <div class="main container">
+            <h3 class="center-align">Update Recipe</h3>
             <form id="recipeUpdate">
-                <input type="text" id="oldName" placeholder="Old Name">
-                <input type="text" id="newName" placeholder="New Name">
-                <textarea id="newDescription" cols="30" rows="10" placeholder="New Description"></textarea>
-                <input type="submit" value="Update Recipe">
+                <div class="input-field">
+                  <input type="text" id="oldName">
+                  <label for="oldName">Old Name</label>
+                </div>
+                <div class="input-field">
+                  <input type="text" id="newName">
+                  <label for="newName">New Name</label>
+                </div>
+                <div class="input-field">
+                  <textarea id="newDescription" class="materialize-textarea"></textarea>
+                  <label for="newDescription">New Description</label>
+                </div>
+                <input class="waves-effect waves-light btn" type="submit" value="Update Recipe">
             </form>
         </div>
 
