Some Errors pops added

--- a/views/recipe/add.ejs
+++ b/views/recipe/add.ejs
@@ -30,6 +30,8 @@
                 </div>
                 <input class="waves-effect waves-light btn" type="submit" value="Add Recipe">
             </form>
+
+            <div class="info"></div>
         </div>
 
         <%- include partials/errors %>
