--- a/views/admin/change.ejs
+++ b/views/admin/change.ejs
@@ -40,6 +40,8 @@
             </div>
             <input type="submit" class="waves-effect waves-light btn" value="Change Crediantials">
           </form>
+
+          <div class="info"></div>
         </div>
         <%- include partials/errors %>
       <!--JavaScript at end of body for optimized loading-->
