--- a/views/admin/delete.ejs
+++ b/views/admin/delete.ejs
@@ -21,6 +21,8 @@
             <form class="col s12" id="userDelete" style="display: none">
             </form>
           </div>
+
+          <div class="info"></div>
         </div>  
         <%- include partials/errors %>      
 
