--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -30,6 +30,8 @@
             </form>
         </div>
 
+        <%- include partials/errors %>
+
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script type="text/javascript" src="/js/libs/materialize.min.js"></script>
