--- a/views/admin/signup.ejs
+++ b/views/admin/signup.ejs
@@ -31,6 +31,8 @@
             </div>
             <input class="waves-effect waves-light btn" type="submit" value="SignUp">
           </form>
+
+          <div class="info"></div>
         </div>
 
         <%- include partials/errors %>
