--- a/views/product/add.ejs
+++ b/views/product/add.ejs
@@ -34,6 +34,8 @@
               </div>
               <input class="waves-effect waves-light btn" type="submit" value="Add Product">
             </form>
+
+            <div class="info"></div>
         </div>
 
         <%- include partials/errors %>
