--- a/views/product/delete.ejs
+++ b/views/product/delete.ejs
@@ -22,6 +22,8 @@
             <div class="row">
                 <form class="col s12" id="productDelete" style="display: none"></form>
             </div>
+            
+            <div class="info"></div>
         </div>  
 
         <%- include partials/errors %>
