--- a/views/product/update.ejs
+++ b/views/product/update.ejs
@@ -39,6 +39,8 @@
                 </div>
                 <input class="waves-effect waves-light btn" type="submit" value="Update Product">
             </form>
+
+            <div class="info"></div>
         </div>
 
         <%- include partials/errors %>
