--- a/views/recipe/delete.ejs
+++ b/views/recipe/delete.ejs
@@ -22,6 +22,8 @@
             <div class="row">
                 <form class="col s12" id="recipeDelete" style="display: none"></form>
             </div>
+
+            <div class="info"></div>
         </div>  
 
         <%- include partials/errors %>
