--- a/views/recipe/update.ejs
+++ b/views/recipe/update.ejs
@@ -34,6 +34,8 @@
                 </div>
                 <input class="waves-effect waves-light btn" type="submit" value="Update Recipe">
             </form>
+
+            <div class="info"></div>
         </div>
 
         <%- include partials/errors %>
