--- a/views/product/update.ejs
+++ b/views/product/update.ejs
@@ -14,15 +14,17 @@
     </head>
 
     <body>
-      
         <%- include partials/loader %>
-
+        <div  id="pid" hidden><%- pid %></div>
         <div class="main container">
+          <div class="row">
+            <div class="col s12 m2"></div>
+            <div class="col s12 m8">
             <h3 class="center-align">Update Product</h3>
             <form id="productUpdate">
-                <div class="input-field">
-                  <input type="text" id="oldName">
-                  <label for="oldName">Old Name</label>
+                <div class="input-field" id="productName">
+                   <input type="text" id="oldName" readonly >
+                  <label  for="newName">Readonly</label>
                 </div>
                 <div class="input-field">
                   <input type="text" id="newName">
@@ -31,17 +33,20 @@
                 <div class="input-field">
                   <!-- <input type="text" id="newDescription"> -->
                   <textarea id="newDescription" class="materialize-textarea"></textarea>
-                  <label for="newDescription">New Description</label>
+                  <!-- <label for="newDescription">New Description</label> -->
                 </div>
                 <div class="input-field">
                   <input type="number" id="newPosition">
-                  <label for="newPosition">New Position</label>
+                  <!-- <label for="newPosition">New Position</label> -->
                 </div>
                 <input class="waves-effect waves-light btn" type="submit" value="Update Product">
             </form>
 
             <div class="info"></div>
+            </div>
+            <div class="col s12 m2"></div>
         </div>
+      </div>
 
         <%- include partials/errors %>
 
