--- a/views/delispices/index.ejs
+++ b/views/delispices/index.ejs
@@ -2,9 +2,80 @@
 <html lang="en">
 <head>
     <% include includes/externel.ejs %>
+
+    <style>
+      .loader{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: #411717;
+      }
+
+      .hourGlass {
+        display: inline-block;
+        position: absolute;
+        width: 150px;
+        height: 150px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      .hourGlass:after {
+        content: " ";
+        display: block;
+        border-radius: 50%;
+        width: 0;
+        height: 0;
+        margin: 5px;
+        box-sizing: border-box;
+        border: 70px solid #fff;
+        border-color: #fff transparent #fff transparent;
+        animation: lds-hourglass 1.2s infinite;
+      }
+
+      @keyframes lds-hourglass {
+        0% {
+          transform: rotate(0);
+          animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+        }
+        50% {
+          transform: rotate(900deg);
+          animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        }
+        100% {
+          transform: rotate(1800deg);
+        }
+      }
+
+      #intro{
+        display: none;
+      }
+
+      #main{
+        display: none;
+      }
+
+      #footer{
+        display: none;
+      }
+
+      .back-to-top{
+        display: none;
+      }
+
+      header{
+        display: none;
+      }
+
+    </style>
 </head>
 
 <body>
+
+    <div class="loader">
+      <div class="hourGlass"></div>
+    </div>
 
   <!--____________________________NAV_____________________________ -->
   <% include includes/header.ejs %>
