--- a/views/recipe/update.ejs
+++ b/views/recipe/update.ejs
@@ -1,48 +1,60 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="/libs/materialize.min.css"  media="screen,projection"/>
+<html>
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Recipe update page</title>
-      <link rel="stylesheet" href="/css/recipe/update.css">
-      <%- include partials/loadercss %>
-    </head>
+<head>
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="/libs/materialize.min.css" media="screen,projection" />
 
-    <body>
-      
-        <%- include partials/loader %>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Recipe update page</title>
+  <link rel="stylesheet" href="/css/recipe/update.css">
+  <%- include partials/loadercss %>
+</head>
 
-        <div class="main container">
-            <h3 class="center-align">Update Recipe</h3>
-            <form id="recipeUpdate">
-                <div class="input-field">
-                  <input type="text" id="oldName">
-                  <label for="oldName">Old Name</label>
-                </div>
-                <div class="input-field">
-                  <input type="text" id="newName">
-                  <label for="newName">New Name</label>
-                </div>
-                <div class="input-field">
-                  <textarea id="newDescription" class="materialize-textarea"></textarea>
-                  <label for="newDescription">New Description</label>
-                </div>
-                <input class="waves-effect waves-light btn" type="submit" value="Update Recipe">
-            </form>
+<body>
 
-            <div class="info"></div>
-        </div>
+  <%- include partials/loader %>
+  <div id="rid" hidden>
+    <%- rid %>
+  </div>
 
-        <%- include partials/errors %>
+  <div class="main container">
+    <div class="row">
+      <div class="col s12 m2"></div>
+      <div class="col s12 m8">
+        <h3 class="center-align">Update Recipe</h3>
+        <form id="recipeUpdate">
+          <div class="input-field">
+            <input type="text" id="oldName" readonly>
+            <label for="oldName">Readonly</label>
+          </div>
+          <div class="input-field">
+            <input type="text" id="newName">
+            <label for="newName">New Name</label>
+          </div>
+          <div class="input-field">
+            <textarea id="newDescription" class="materialize-textarea"></textarea>
+            <label for="newDescription">New Description</label>
+          </div>
+          <input class="waves-effect waves-light btn" type="submit" value="Update Recipe">
+        </form>
 
-      <!--JavaScript at end of body for optimized loading-->
-      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-      <script type="text/javascript" src="/js/libs/materialize.min.js"></script>
-      <script src="/js/recipe/update.js"></script>
-    </body>
-  </html>
+        <div class="info"></div>
+      </div>
+      <div class="col s12 m2"></div>
+    </div>
+  </div>
+
+  <%- include partials/errors %>
+
+  <!--JavaScript at end of body for optimized loading-->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script type="text/javascript" src="/js/libs/materialize.min.js"></script>
+  <script src="/js/recipe/update.js"></script>
+</body>
+
+</html>
