--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -41,15 +41,24 @@
                   <div class="clickMe" data-url="/add/recipe">Add Recipes</div>
                 </div>
               </li>
+              <li>
+                <div class="collapsible-header">Manipulate Instructions</div>
+                <div class="collapsible-body">
+                  <div class="clickMe" data-url="/add/instruction">Add Instructions</div>
+                </div>
+              </li>
             </ul>
           </div>
           <div class="col s12 m9">
             <div class="row">
               <div class="col s12" id="products-row">
-                <h3>Products</h3>
+                <!-- <h3>Products</h3> -->
               </div>
               <div class="col s12" id="recipes-row">
-                <h3>Recipes</h3>
+                <!-- <h3>Recipes</h3> -->
+              </div>
+              <div class="col s12" id="instructions-row">
+                <!-- <h3>Instructions</h3> -->
               </div>
             </div>
           </div>
@@ -60,7 +69,7 @@
 
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
-    <div class="modal-content">
+    <div class="modal-content product-content">
       <h4 class="black-text">Modal Header</h4>
       <p class="black-text">Are You Sure !!!</p>
     </div>
@@ -69,7 +78,7 @@
     </div>
   </div>
   <div id="modal2" class="modal">
-    <div class="modal-content">
+    <div class="modal-content recipe-content">
       <h4 class="black-text">Modal Header</h4>
       <p class="black-text">Are You Sure !!!</p>
     </div>
@@ -77,6 +86,16 @@
       <a href="#" class="modal-close waves-effect waves-green btn-flat recipe-agree-btn">Agree</a>
     </div>
   </div>
+  <div id="modal3" class="modal">
+    <div class="modal-content instruction-content">
+      <h4 class="black-text">Modal Header</h4>
+      <p class="black-text">Are You Sure !!!</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#" class="modal-close waves-effect waves-green btn-flat instruction-agree-btn">Agree</a>
+    </div>
+  </div>
+  <div style="display: none;" class="instructionId"></div>
   <%- include partials/errors %>
 
   <!--JavaScript at end of body for optimized loading-->
