--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -22,23 +22,30 @@
         <div class='col s12 m3'>
             <ul class="collapsible popout">
               <li>
-                <div class="collapsible-header">Manipulate User</div>
+                <div class="collapsible-header">Users</div>
                 <div class="collapsible-body">
                   <div class="clickMe" data-url="/user/signup">Add User</div>
                   <div class="clickMe" data-url="/user/delete">Delete User</div>
-                  <div class="clickMe" data-url="/user/changeInfo">Update Your Info</div>
+                  
                 </div>
               </li>
               <li>
-                <div class="collapsible-header">Manipulate Product</div>
+                <div class="collapsible-header">Products</div>
                 <div class="collapsible-body">
                   <div class="clickMe" data-url="/add/products">Add Product</div>
                 </div>
               </li>
               <li>
-                <div class="collapsible-header">Manipulate Recipe</div>
+                <div class="collapsible-header">Recipes</div>
                 <div class="collapsible-body">
                   <div class="clickMe" data-url="/add/recipe">Add Recipes</div>
+                </div>
+              </li>
+              <li>
+                <div class="collapsible-header">Profile</div>
+                <div class="collapsible-body">
+                  <div class="clickMe" data-url="/user/changeInfo">Update</div>
+                  <div class="clickMe " data-url="#" id="logout" >Logout</div>
                 </div>
               </li>
             </ul>
