--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -15,7 +15,12 @@
 
     <body>
         <%- include partials/loader %>
-        <div class="main container">
+        <br><br><br>
+    <div class="row">
+    <div class="col s12 m3"></div>
+    <div class="col s12 m6">
+      <div class="card blue-grey darken-1">
+        <div class="main container ">
             <h3 class="center-align">Login Form</h3>
             <form id="loginForm">
                 <div class="input-field">
@@ -29,6 +34,10 @@
                 <input class="waves-effect waves-light btn" type="submit" value="Login"/>
             </form>
         </div>
+      </div>
+    </div>
+  </div>
+
 
         <%- include partials/errors %>
 
