--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -42,16 +42,16 @@
                 </div>
               </li>
               <li>
-<<<<<<< HEAD
-                <div class="collapsible-header">Profile</div>
+                <div class="collapsible-header">Instructions</div>
+                <div class="collapsible-body">
+                  <div class="clickMe" data-url="/add/instruction">Add Instructions</div>
+                </div>
+              </li>
+              <li>
+                 <div class="collapsible-header">Profile</div>
                 <div class="collapsible-body">
                   <div class="clickMe" data-url="/user/changeInfo">Update</div>
                   <div class="clickMe " data-url="#" id="logout" >Logout</div>
-=======
-                <div class="collapsible-header">Manipulate Instructions</div>
-                <div class="collapsible-body">
-                  <div class="clickMe" data-url="/add/instruction">Add Instructions</div>
->>>>>>> bfd5e0202d8885acd0617869d14e43280a32f0fd
                 </div>
               </li>
             </ul>
