--- a/views/delispices/products.ejs
+++ b/views/delispices/products.ejs
@@ -7,7 +7,12 @@
 
 
 </head>
-<body><br><br><br>
+<body>
+<div class="loader">
+      <div class="hourGlass"></div>
+    </div>
+  <br><br><br>
+ 
 
 	<!--____________________________NAV_____________________________ -->
     <% include includes/header.ejs %>
