--- a/views/delispices/index.ejs
+++ b/views/delispices/index.ejs
@@ -124,16 +124,13 @@
           </header>
           <div class="container" id="aboutcontainer">
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-md-12 col-lg-6">
                   <br>
                   <br>
                   
-                   <h1> &emsp;&emsp;&emsp;&emsp;DéliSpices</h1>
+                   <h1 class="text-center">DéliSpices</h1>
                    <br>
-                    <p> <b><i>
-                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-                          Indian Culinary Solutions</i></b><br>
-                          <br>
+                    <p class="text-center"> <b><i>Indian Culinary Solutions</i></b><br><br>
 
                   
               DéliSpices is an effort at recreating the magical taste of Indian cuisines by providing 
@@ -143,7 +140,7 @@
                     </p>
 
                 </div>
-                <div class="col-lg-6">
+                <div class="col-md-12 col-lg-6 text-center">
                  <img src="images/image1.jpg">
                 </div>
               </div>
@@ -395,16 +392,15 @@
 
         <div class="row contact-info">
 
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <div class="contact-address">
               
               <h3>Address</h3>
-             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.9507319575164!2d72.84334981450704!3d19.15363378704348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b65aa3f13103%3A0x32134c26c6031956!2sNAMOSRI+VENTURES+PRIVATE+LIMITED!5e0!3m2!1sen!2sin!4v1527333339413"
-              width="300" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.9507319575164!2d72.84334981450704!3d19.15363378704348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b65aa3f13103%3A0x32134c26c6031956!2sNAMOSRI+VENTURES+PRIVATE+LIMITED!5e0!3m2!1sen!2sin!4v1527333339413" frameborder="0" style="border:0;width: 100%;height: auto;" allowfullscreen></iframe>
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <div class="contact-phone">
            
               <h3>Join our community:</h3>
@@ -417,7 +413,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <div class="contact-email">
               
               <h3>For any feedback/ complaint, Drop an Email at :</h3>
