request for product is done in main site or admin panel

--- a/views/delispices/singleProduct.ejs
+++ b/views/delispices/singleProduct.ejs
@@ -112,7 +112,7 @@
           <div class="row">
               <div class="col-lg-6" id="quotesection">
                   <h3> Get a Quick Quote</h3>
-                  <form>
+                  <form >
                       <div class="col-9">
                       <label for="form-group">Mobile Number:</label>
                       <input type="text" id="tf1" class="form-control" placeholder="Enter Mobile">
@@ -131,7 +131,7 @@
   
               <div class="col-lg-6" id="samplesection">
                    <h3> Request a Free Sample</h3>
-                   <form>
+                   <form id="requestForm">
                       <div class="col-9">
                       <label for="form-group">Full Name:</label>
                       <input type="text" id="tf3" class="form-control" placeholder="Enter Full Name:">
@@ -153,7 +153,7 @@
                       <br>
   
                       <div class="col-9">
-                      <button type="submit" class="btn btn-success">Request Sample</button>
+                      <button type="submit" id="requestBtn" class="btn btn-success ">Request Sample</button>
                       </div>
                    </form>
               </div>
