--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -54,10 +54,16 @@
                   <div class="clickMe " data-url="#" id="logout" >Logout</div>
                 </div>
               </li>
+
+              <li>
+                 <div class="collapsible-header">Distributer Request</div>
+                <div class="collapsible-body">
+                  <div class=" clickMe distributor-requests" data-url='/get/all/distributors' >Distributor's Request</div>
+                  
+                </div>
+              </li>
             </ul>
-            <div class="btn distributor-requests" style="width: 100%;padding: 0px;">
-              Distributor's Request
-            </div>
+            
           </div>
           
           <div class="col s12 m9">
