--- a/views/delispices/includes/externel.ejs
+++ b/views/delispices/includes/externel.ejs
@@ -29,7 +29,7 @@
 
   <style>
       .loader{
-        position: absolute;
+        position: fixed;
         width: 100%;
         height: 100%;
         background: #411717;
