--- a/views/delispices/singleProduct.ejs
+++ b/views/delispices/singleProduct.ejs
@@ -33,7 +33,7 @@
 
  <style>
       .loader{
-        position: absolute;
+        position: fixed;
         width: 100%;
         height: 100%;
         background: #411717;
@@ -171,6 +171,27 @@
 
     </div>
     </section>
+
+     <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Successfully</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              
+            </div>
+            <div class="modal-footer">
+              <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+              <button type="button" class="btn btn-primary" data-dismiss="modal">Okay</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <!-- #Footer -->
 
